--- a/TopCard/src/swt/swl/topcard/view/MainWindowView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/MainWindowView.fxml
@@ -7,15 +7,15 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.MainWindowController">
    <children>
-      <MenuButton layoutX="312.0" layoutY="3.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="132.0" text="Show RQCards" textAlignment="CENTER">
+      <MenuButton fx:id="showRQCards" layoutX="313.0" layoutY="3.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="132.0" text="showRQCards" textAlignment="CENTER">
         <items>
-          <MenuItem mnemonicParsing="false" onAction="#toVoteButtonClicked" text="to Vote" />
-          <MenuItem mnemonicParsing="false" onAction="#myRqCardsbuttonClicked" text="my RQCards" />
+          <MenuItem fx:id="toVote" mnemonicParsing="false" onAction="#toVoteButtonClicked" text="to Vote" />
+          <MenuItem fx:id="myRqCards" mnemonicParsing="false" onAction="#myRqCardsButtonClicked" text="myRqCards" />
         </items>
       </MenuButton>
-      <Button layoutX="7.0" layoutY="3.0" mnemonicParsing="false" onAction="#startButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Start" textAlignment="CENTER" />
-      <Button layoutX="159.0" layoutY="3.0" mnemonicParsing="false" onAction="#createNewRqbuttonClicked" prefHeight="38.0" prefWidth="132.0" text="Create new RQ" />
-      <Button layoutX="459.0" layoutY="3.0" mnemonicParsing="false" onAction="#searchbittonClicked" prefHeight="38.0" prefWidth="132.0" text="Search" textAlignment="CENTER" />
-      <Pane layoutX="24.0" layoutY="44.0" prefHeight="342.0" prefWidth="577.0" />
+      <Button fx:id="start" layoutX="7.0" layoutY="3.0" mnemonicParsing="false" onAction="#startButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Start" textAlignment="CENTER" />
+      <Button fx:id="createNewRq" layoutX="159.0" layoutY="3.0" mnemonicParsing="false" onAction="#createNewRqButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Create new RQ" />
+      <Button fx:id="search" layoutX="459.0" layoutY="3.0" mnemonicParsing="false" onAction="#searchButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Search" textAlignment="CENTER" />
+      <Pane layoutX="1.0" layoutY="44.0" prefHeight="358.0" prefWidth="600.0" />
    </children>
 </Pane>
