--- a/TopCard/bin/swt/swl/topcard/view/RequirementCardView.fxml
+++ b/TopCard/bin/swt/swl/topcard/view/RequirementCardView.fxml
@@ -5,13 +5,57 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.Controller.RequirementCardController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.RequierementCardController">
    <children>
-      <TableView id="requirementCardsTable" prefHeight="400.0" prefWidth="600.0">
-        <columns>
-          <TableColumn id="requirementCardsColumn" prefWidth="599.0" text="RequirementCards" />
-        </columns>
-      </TableView>
+      <Pane layoutX="11.0" layoutY="54.0" prefHeight="358.0" prefWidth="600.0">
+         <children>
+            <HBox prefHeight="358.0" prefWidth="607.0">
+               <children>
+                  <Pane fx:id="mainWindowPainLeft" prefHeight="358.0" prefWidth="305.0" />
+                  <Pane fx:id="mainWindowPainRight" prefHeight="358.0" prefWidth="305.0" />
+               </children>
+            </HBox>
+         </children>
+      </Pane>
+      <Button fx:id="search" layoutX="469.0" layoutY="13.0" mnemonicParsing="false" onAction="#searchButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Search" textAlignment="CENTER" />
+      <Button fx:id="createNewRq" layoutX="169.0" layoutY="13.0" mnemonicParsing="false" onAction="#createNewRqButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Create new RQ" />
+      <Button fx:id="start" layoutX="17.0" layoutY="13.0" mnemonicParsing="false" onAction="#startButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Start" textAlignment="CENTER" />
+      <MenuButton fx:id="showRQCards" layoutX="323.0" layoutY="13.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="132.0" text="showRQCards" textAlignment="CENTER">
+         <items>
+            <MenuItem fx:id="toVote" mnemonicParsing="false" onAction="#toVoteButtonClicked" text="to Vote" />
+            <MenuItem fx:id="myRqCards" mnemonicParsing="false" onAction="#myRqCardsButtonClicked" text="myRqCards" />
+         </items>
+      </MenuButton>
+      <Pane layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+         <children>
+            <MenuButton fx:id="showRQCards" layoutX="313.0" layoutY="3.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="132.0" text="showRQCards" textAlignment="CENTER">
+               <items>
+                  <MenuItem fx:id="toVote" mnemonicParsing="false" onAction="#toVoteButtonClicked" text="to Vote" />
+                  <MenuItem fx:id="myRqCards" mnemonicParsing="false" onAction="#myRqCardsButtonClicked" text="myRqCards" />
+               </items>
+            </MenuButton>
+            <Button fx:id="start" layoutX="7.0" layoutY="3.0" mnemonicParsing="false" onAction="#startButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Start" textAlignment="CENTER" />
+            <Button fx:id="createNewRq" layoutX="159.0" layoutY="3.0" mnemonicParsing="false" onAction="#createNewRqButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Create new RQ" />
+            <Button fx:id="search" layoutX="459.0" layoutY="3.0" mnemonicParsing="false" onAction="#searchButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Search" textAlignment="CENTER" />
+            <Pane layoutX="1.0" layoutY="44.0" prefHeight="358.0" prefWidth="600.0">
+               <children>
+                  <HBox layoutX="-12.0" prefHeight="345.0" prefWidth="600.0">
+                     <children>
+                        <Pane fx:id="mainWindowPainLeft" prefHeight="358.0" prefWidth="305.0">
+                           <children>
+                              <TableView fx:id="requirementCardsTable" prefHeight="345.0" prefWidth="300.0">
+                                <columns>
+                                  <TableColumn fx:id="requirementCards" prefWidth="299.0" text="requirementCards" />
+                                </columns>
+                              </TableView>
+                           </children>
+                        </Pane>
+                        <Pane fx:id="mainWindowPainRight" prefHeight="358.0" prefWidth="305.0" />
+                     </children>
+                  </HBox>
+               </children>
+            </Pane>
+         </children>
+      </Pane>
    </children>
 </Pane>
