--- a/TopCard/src/swt/swl/topcard/view/RequirementCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/RequirementCardView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.BorderPane?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.Controller.RequirementCardController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.RequirementCardController">
    <children>
       <TableView id="requirementCardsTable" prefHeight="400.0" prefWidth="600.0">
         <columns>
