--- a/TopCard/src/swt/swl/topcard/view/ShowAndVoteRQCard.fxml
+++ b/TopCard/src/swt/swl/topcard/view/ShowAndVoteRQCard.fxml
@@ -35,11 +35,11 @@
                   <Label fx:id="descriptionLabel" prefHeight="27.0" prefWidth="201.0" text="descriptionLabel" />
                   <VBox fx:id="voteDescription" prefHeight="189.0" prefWidth="143.0">
                      <children>
-                        <Label fx:id="preciseLabel" prefHeight="27.0" prefWidth="201.0" text="precise:" />
-                        <Label fx:id="understandableLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="201.0" text="understandable:" />
-                        <Label fx:id="correctLabel" layoutX="10.0" layoutY="37.0" prefHeight="27.0" prefWidth="201.0" text="correct:" />
-                        <Label fx:id="correctLabel1" layoutX="10.0" layoutY="64.0" prefHeight="27.0" prefWidth="132.0" text="complete:" />
-                        <Label fx:id="correctLabel11" layoutX="10.0" layoutY="91.0" prefHeight="27.0" prefWidth="201.0" text="atomic:" />
+                        <Label prefHeight="27.0" prefWidth="201.0" text="precise:" />
+                        <Label layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="201.0" text="understandable:" />
+                        <Label layoutX="10.0" layoutY="37.0" prefHeight="27.0" prefWidth="201.0" text="correct:" />
+                        <Label layoutX="10.0" layoutY="64.0" prefHeight="27.0" prefWidth="132.0" text="complete:" />
+                        <Label layoutX="10.0" layoutY="91.0" prefHeight="27.0" prefWidth="201.0" text="atomic:" />
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0">
@@ -59,11 +59,11 @@
                   <Label fx:id="rationaleLabel" prefHeight="27.0" prefWidth="201.0" text="rationaleLabel" />
                   <VBox fx:id="voteRationale" prefHeight="118.0" prefWidth="180.0">
                      <children>
-                        <Label fx:id="precise2" prefHeight="27.0" prefWidth="201.0" text="precise:" />
-                        <Label fx:id="understandable2" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="201.0" text="understandable:" />
-                        <Label fx:id="traceableLabel" layoutX="10.0" layoutY="37.0" prefHeight="27.0" prefWidth="201.0" text="traceable:" />
-                        <Label fx:id="completeLabel" layoutX="10.0" layoutY="64.0" prefHeight="27.0" prefWidth="201.0" text="complete:" />
-                        <Label fx:id="consistentLabel" layoutX="10.0" layoutY="91.0" prefHeight="27.0" prefWidth="201.0" text="consistent:" />
+                        <Label prefHeight="27.0" prefWidth="201.0" text="precise:" />
+                        <Label layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="201.0" text="understandable:" />
+                        <Label layoutX="10.0" layoutY="37.0" prefHeight="27.0" prefWidth="201.0" text="traceable:" />
+                        <Label layoutX="10.0" layoutY="64.0" prefHeight="27.0" prefWidth="201.0" text="complete:" />
+                        <Label layoutX="10.0" layoutY="91.0" prefHeight="27.0" prefWidth="201.0" text="consistent:" />
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0">
