--- a/TopCard/src/swt/swl/topcard/view/ShowAndVoteRQCard.fxml
+++ b/TopCard/src/swt/swl/topcard/view/ShowAndVoteRQCard.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="983.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.VoteOrEditRqCardController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="983.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.ShowAndVoteRqCardController">
    <children>
       <VBox layoutX="20.0" layoutY="58.0" prefHeight="902.0" prefWidth="749.0" spacing="20.0">
          <children>
@@ -115,7 +115,7 @@
          </children>
       </VBox>
       <Label layoutX="4.0" layoutY="28.0" prefHeight="27.0" prefWidth="943.0" text="_____________________________________________________________________________________________________________________________" />
-      <Label fx:id="voteOrEditRequirementLabel" layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="277.0" text="Vote Requirement Card: " underline="true" />
+      <Label layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="277.0" text="Vote Requirement Card: " underline="true" />
       <Label fx:id="createdAtLabel" layoutX="706.0" layoutY="58.0" prefHeight="27.0" prefWidth="224.0" />
       <Label fx:id="lastModifiedAtLabel" layoutX="706.0" layoutY="91.0" prefHeight="27.0" prefWidth="224.0" />
       <Label layoutX="568.0" layoutY="91.0" prefHeight="27.0" prefWidth="149.0" text="Last Modified At:" />
