--- a/TopCard/src/swt/swl/topcard/view/UserLoginWindow.fxml
+++ b/TopCard/src/swt/swl/topcard/view/UserLoginWindow.fxml
@@ -10,6 +10,6 @@
       <Label layoutX="70.0" layoutY="34.0" prefHeight="27.0" prefWidth="248.0" text="Please enter your UserName." />
       <TextField fx:id="userNameTextField" layoutX="70.0" layoutY="81.0" promptText="UserName" />
       <Label layoutX="107.0" layoutY="161.0" prefHeight="27.0" prefWidth="34.0" text="or: " underline="true" />
-      <Button fx:id="registrateButton" layoutX="71.0" layoutY="191.0" mnemonicParsing="false" onAction="#registrateButtonClicked" prefHeight="20.0" prefWidth="107.0" text="Registrate" />
+      <Button fx:id="registerButton" layoutX="71.0" layoutY="191.0" mnemonicParsing="false" onAction="#registerButtonClicked" prefHeight="20.0" prefWidth="107.0" text="Register" />
    </children>
 </Pane>
