--- a/TopCard/bin/swt/swl/topcard/view/RequirementCardView.fxml
+++ b/TopCard/bin/swt/swl/topcard/view/RequirementCardView.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -29,6 +31,95 @@
                         </TableView>
                      </children>
                   </Pane>
+                  <VBox prefHeight="685.0" prefWidth="170.0">
+                     <children>
+                        <Label fx:id="titleLabel" prefHeight="50.0" prefWidth="159.0" text="Title:">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="ownerLabel" prefHeight="50.0" prefWidth="159.0" text="Owner:">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="descriptionLabel" prefHeight="50.0" prefWidth="159.0" text="Description:">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="ratinaleLabel" prefHeight="50.0" prefWidth="159.0" text="Rationale:">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="sourceLabel" prefHeight="50.0" prefWidth="159.0" text="Source:">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="userstoriesLabel" prefHeight="50.0" prefWidth="159.0" text="Userstories:">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="supportingMaterialsLabel" prefHeight="50.0" prefWidth="163.0" text="Supporting Materials:">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="fitCriterionLabel" prefHeight="50.0" prefWidth="159.0" text="Fit criterion:">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="frozenLabel" prefHeight="50.0" prefWidth="159.0" text="Frozen ?">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="685.0" prefWidth="298.0">
+                     <children>
+                        <Label fx:id="titleReultLabel" prefHeight="50.0" prefWidth="159.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font></Label>
+                        <Label fx:id="ownerResultLabel" prefHeight="50.0" prefWidth="159.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font></Label>
+                        <Label fx:id="descriptionResultLabel" prefHeight="50.0" prefWidth="159.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font></Label>
+                        <Label fx:id="ratinaleResultLabel" prefHeight="50.0" prefWidth="159.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font></Label>
+                        <Label fx:id="sourceResultLabel" prefHeight="50.0" prefWidth="159.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font></Label>
+                        <Label fx:id="userstoriesResultLabel" prefHeight="50.0" prefWidth="159.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font></Label>
+                        <Label fx:id="supportingMaterialsResultLabel" prefHeight="50.0" prefWidth="159.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font></Label>
+                        <Label fx:id="fitCriterionResultLabel" prefHeight="50.0" prefWidth="159.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font></Label>
+                        <Label fx:id="frozenResultLabel" prefHeight="50.0" prefWidth="159.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font></Label>
+                     </children>
+                  </VBox>
                </children>
             </HBox>
          </children>
