--- a/TopCard/bin/swt/swl/topcard/view/RequirementCardView.fxml
+++ b/TopCard/bin/swt/swl/topcard/view/RequirementCardView.fxml
@@ -31,7 +31,7 @@
                         </TableView>
                      </children>
                   </Pane>
-                  <VBox prefHeight="685.0" prefWidth="170.0">
+                  <VBox prefHeight="532.0" prefWidth="170.0">
                      <children>
                         <Label fx:id="titleLabel" prefHeight="50.0" prefWidth="159.0" text="Title:">
                            <font>
@@ -48,7 +48,7 @@
                               <Font size="15.0" />
                            </font>
                         </Label>
-                        <Label fx:id="ratinaleLabel" prefHeight="50.0" prefWidth="159.0" text="Rationale:">
+                        <Label fx:id="rationaleLabel" prefHeight="50.0" prefWidth="159.0" text="Rationale:">
                            <font>
                               <Font size="15.0" />
                            </font>
@@ -80,41 +80,41 @@
                         </Label>
                      </children>
                   </VBox>
-                  <VBox prefHeight="685.0" prefWidth="298.0">
+                  <VBox prefHeight="572.0" prefWidth="227.0">
                      <children>
-                        <Label fx:id="titleReultLabel" prefHeight="50.0" prefWidth="159.0">
+                        <Label fx:id="titleResultLabel" prefHeight="50.0" prefWidth="229.0">
                            <font>
                               <Font size="15.0" />
                            </font></Label>
-                        <Label fx:id="ownerResultLabel" prefHeight="50.0" prefWidth="159.0">
+                        <Label fx:id="ownerResultLabel" prefHeight="50.0" prefWidth="258.0">
                            <font>
                               <Font size="15.0" />
                            </font></Label>
-                        <Label fx:id="descriptionResultLabel" prefHeight="50.0" prefWidth="159.0">
+                        <Label fx:id="descriptionResultLabel" prefHeight="50.0" prefWidth="256.0">
                            <font>
                               <Font size="15.0" />
                            </font></Label>
-                        <Label fx:id="ratinaleResultLabel" prefHeight="50.0" prefWidth="159.0">
+                        <Label fx:id="rationaleResultLabel" prefHeight="50.0" prefWidth="254.0">
                            <font>
                               <Font size="15.0" />
                            </font></Label>
-                        <Label fx:id="sourceResultLabel" prefHeight="50.0" prefWidth="159.0">
+                        <Label fx:id="sourceResultLabel" prefHeight="50.0" prefWidth="292.0">
                            <font>
                               <Font size="15.0" />
                            </font></Label>
-                        <Label fx:id="userstoriesResultLabel" prefHeight="50.0" prefWidth="159.0">
+                        <Label fx:id="userstoriesResultLabel" prefHeight="50.0" prefWidth="289.0">
                            <font>
                               <Font size="15.0" />
                            </font></Label>
-                        <Label fx:id="supportingMaterialsResultLabel" prefHeight="50.0" prefWidth="159.0">
+                        <Label fx:id="supportingMaterialsResultLabel" prefHeight="50.0" prefWidth="246.0">
                            <font>
                               <Font size="15.0" />
                            </font></Label>
-                        <Label fx:id="fitCriterionResultLabel" prefHeight="50.0" prefWidth="159.0">
+                        <Label fx:id="fitCriterionResultLabel" prefHeight="50.0" prefWidth="287.0">
                            <font>
                               <Font size="15.0" />
                            </font></Label>
-                        <Label fx:id="frozenResultLabel" prefHeight="50.0" prefWidth="159.0">
+                        <Label fx:id="frozenResultLabel" prefHeight="50.0" prefWidth="88.0">
                            <font>
                               <Font size="15.0" />
                            </font></Label>
